protocols/tests/inverters/inverter_d0.out
error: Cannot observe forbidden port 's' after assigning DontCare to a combinationally dependent input
  ┌─ inverters/inverter_d0.prot:7:12
  │
7 │   DUT.a := DUT.s;
  │            ^^^^^ Cannot observe forbidden port 's' after assigning DontCare to a combinationally dependent input

